--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity"
-    android:padding="20dp">
+    android:padding="40dp"
+    android:background="#52504E">
 
     <TextView
         android:id="@+id/MainActivity_titol"
@@ -32,14 +33,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:paddingTop="40dp">
+        android:paddingTop="40dp"
+
+        app:hintTextColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"
+>
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/MainActivity_email_et"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/MainActivity_logo"
-        android:hint="Correo electrónico"/>
+        android:hint="Correo Electrónico"
+        android:background="@android:color/transparent"/>
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -49,7 +55,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
-        android:layout_below="@+id/RegistrarActivity_email_TIL">
+        android:layout_below="@+id/RegistrarActivity_email_TIL"
+        app:hintTextColor="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary">
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/MainActivity_password_et"
@@ -57,8 +65,17 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/MainActivity_email_et"
         android:hint="Contraseña"
-        android:inputType="textPassword"/>
+        android:inputType="textPassword"
+        android:background="@android:color/transparent"/>
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Entrar"
+        android:layout_below="@+id/RegistrarActivity_password_TIL"
+        android:paddingTop="20dp"
+        android:paddingBottom="20dp"/>
 
 </RelativeLayout>
