--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,81 +1,124 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
+    android:id="@+id/MainActivity_layoutBase"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity"
-    android:padding="40dp"
-    android:background="#52504E">
+    android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/MainActivity_titol"
+    <RelativeLayout
+        android:id="@+id/MainActivity_layoutArriba"
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:fontFamily="@font/chantelli_antiqua"
-        android:gravity="center_horizontal"
-        android:text="Rol &amp; Play"
-        android:textColor="@color/colorPrimary"
-        android:textSize="42sp" />
-
-    <ImageView
-        android:id="@+id/MainActivity_logo"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:srcCompat="@drawable/logo"
-        android:layout_below="@id/MainActivity_titol"
-        android:layout_marginTop="20dp"/>
-
-    <com.google.android.material.textfield.TextInputLayout
-
-        android:id="@+id/RegistrarActivity_email_TIL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
+        android:layout_height="match_parent"
+        tools:context=".MainActivity"
         android:paddingTop="40dp"
+        android:paddingRight="40dp"
+        android:paddingLeft="40dp"
+        android:background="@color/colorPrimaryDark">
 
-        app:hintTextColor="@color/colorPrimary"
-        android:textColorHint="@color/colorPrimary"
->
+        <TextView
+            android:id="@+id/MainActivity_titol"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/chantelli_antiqua"
+            android:gravity="center_horizontal"
+            android:text="Rol &amp; Play"
+            android:textColor="@color/colorPrimary"
+            android:textSize="42sp" />
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/MainActivity_email_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/MainActivity_logo"
-        android:hint="Correo Electrónico"
-        android:background="@android:color/transparent"/>
+        <ImageView
+            android:id="@+id/MainActivity_logo"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/MainActivity_titol"
+            android:layout_marginTop="20dp"
+            app:srcCompat="@drawable/mainlogo" />
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <com.google.android.material.textfield.TextInputLayout
 
-    <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/RegistrarActivity_email_TIL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:paddingTop="40dp"
 
-        android:id="@+id/RegistrarActivity_password_TIL"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:layout_below="@+id/RegistrarActivity_email_TIL"
-        app:hintTextColor="@color/colorPrimary"
-        android:textColorHint="@color/colorPrimary">
+            app:hintTextColor="@color/colorPrimary"
+            android:textColorHint="@color/colorPrimary">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/MainActivity_password_et"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/MainActivity_email_et"
-        android:hint="Contraseña"
-        android:inputType="textPassword"
-        android:background="@android:color/transparent"/>
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/MainActivity_email_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/MainActivity_logo"
+                android:hint="Correo Electrónico"
+                android:background="@android:color/transparent"/>
 
-    </com.google.android.material.textfield.TextInputLayout>
+        </com.google.android.material.textfield.TextInputLayout>
 
-    <Button
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Entrar"
-        android:layout_below="@+id/RegistrarActivity_password_TIL"
-        android:paddingTop="20dp"
-        android:paddingBottom="20dp"/>
+        <com.google.android.material.textfield.TextInputLayout
+
+            android:id="@+id/RegistrarActivity_password_TIL"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
+            android:layout_below="@+id/RegistrarActivity_email_TIL"
+            app:hintTextColor="@color/colorPrimary"
+            android:textColorHint="@color/colorPrimary">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/MainActivity_password_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/MainActivity_email_et"
+                android:hint="Contraseña"
+                android:inputType="textPassword"
+                android:background="@android:color/transparent"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/MainActivity_Entrar_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/RegistrarActivity_password_TIL"
+            android:layout_marginTop="20dp"
+            android:background="@color/colorSecondaryDark"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp"
+            android:text="Entrar"
+            android:textSize="18sp"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            android:backgroundTint="@color/colorSecondaryDark"/>
+
+
+
+    </RelativeLayout>
+
+    <RelativeLayout
+    android:id="@+id/MainActivity_layoutAbajo"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    tools:context=".MainActivity">
+
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:text="¿No tienes cuenta de Rol &amp; Play? Regístrate."
+            android:textSize="15sp"
+            android:textAllCaps="false"
+            android:textColor="@color/colorPrimary"
+            android:backgroundTint="@color/colorPrimaryDark"
+            style="?android:attr/borderlessButtonStyle" />
+
+    </RelativeLayout>
 
 </RelativeLayout>
