--- a/app/src/main/res/layout/activity_registrar.xml
+++ b/app/src/main/res/layout/activity_registrar.xml
@@ -1,61 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout
-    android:id="@+id/MainActivity_layoutBase"
+    android:id="@+id/RegistrarActivity_layoutBase"
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".RegistrarActivity">
 
     <RelativeLayout
-        android:id="@+id/MainActivity_layoutArriba"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/RegistrarActivity_layoutArriba"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".MainActivity"
+        tools:context=".RegistrarActivity"
         android:paddingTop="40dp"
         android:paddingRight="40dp"
         android:paddingLeft="40dp"
         android:background="@color/colorPrimaryDark">
 
         <TextView
-            android:id="@+id/MainActivity_titulo"
+            android:id="@+id/RegistrarActivity_titulo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:fontFamily="@font/chantelli_antiqua"
             android:gravity="center_horizontal"
-            android:text="Rol &amp; Play"
+            android:text="Registrarse"
             android:textColor="@color/colorPrimary"
-            android:textSize="42sp" />
+            android:textSize="42sp"
+            android:layout_marginTop="100dp"/>
 
-        <ImageView
-            android:id="@+id/MainActivity_logo"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/MainActivity_titulo"
-            android:layout_marginTop="20dp"
-            app:srcCompat="@drawable/mainlogo" />
 
         <com.google.android.material.textfield.TextInputLayout
 
             android:id="@+id/RegistrarActivity_email_TIL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_centerInParent="true"
-            android:paddingTop="40dp"
-
-            app:hintTextColor="@color/colorPrimary"
-            android:textColorHint="@color/colorPrimary">
+            android:layout_below="@+id/RegistrarActivity_titulo"
+            android:layout_marginTop="50dp"
+            android:textColorHint="@color/colorPrimary"
+            app:hintTextColor="@color/colorPrimary">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/MainActivity_email_et"
+                android:id="@+id/RegistrarActivity_email_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/MainActivity_logo"
-                android:hint="Correo Electrónico"
-                android:background="@android:color/transparent"/>
+                android:background="@android:color/transparent"
+                android:hint="Correo Electrónico" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
@@ -70,26 +60,47 @@
             android:textColorHint="@color/colorPrimary">
 
             <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/MainActivity_password_et"
+                android:id="@+id/RegistrarActivity_password_et"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/MainActivity_email_et"
+                android:layout_below="@id/RegistrarActivity_email_et"
                 android:hint="Contraseña"
                 android:inputType="textPassword"
                 android:background="@android:color/transparent"/>
 
         </com.google.android.material.textfield.TextInputLayout>
 
-        <Button
-            android:id="@+id/MainActivity_entrar_btn"
+        <com.google.android.material.textfield.TextInputLayout
+
+            android:id="@+id/RegistrarActivity_confirmPassword_TIL"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_centerInParent="true"
             android:layout_below="@+id/RegistrarActivity_password_TIL"
+            app:hintTextColor="@color/colorPrimary"
+            android:textColorHint="@color/colorPrimary">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/RegistrarActivity_confirmPassword_et"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/RegistrarActivity_confirmPassword_et"
+                android:hint="Repetir contraseña"
+                android:inputType="textPassword"
+                android:background="@android:color/transparent"/>
+
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/RegistrarActivity_registrar_btn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/RegistrarActivity_confirmPassword_TIL"
             android:layout_marginTop="20dp"
             android:background="@color/colorSecondaryDark"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
-            android:text="Entrar"
+            android:text="Registrarse"
             android:textSize="18sp"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
@@ -97,28 +108,5 @@
 
     </RelativeLayout>
 
-    <RelativeLayout
-        android:id="@+id/MainActivity_layoutAbajo"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:context=".MainActivity">
-
-        <Button
-            android:id="@+id/MainActivity_registrar_btn"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentBottom="true"
-            android:text="¿No tienes cuenta de Rol &amp; Play? Regístrate."
-            android:textSize="15sp"
-            android:textAllCaps="false"
-            android:textColor="@color/colorPrimary"
-            android:backgroundTint="@color/colorPrimaryDark"
-            style="?android:attr/borderlessButtonStyle"
-            android:paddingTop="20dp"/>
-
-    </RelativeLayout>
-
 </RelativeLayout>
+
