--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -11,7 +11,7 @@
         android:id="@+id/ActivityInicio_FotoFicha"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/test"
+        app:srcCompat="@drawable/fichaPersonaje"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="-47dp" />
 
