--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,6 @@
 
     <RelativeLayout
         android:id="@+id/MainActivity_layoutArriba"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".MainActivity"
@@ -26,12 +23,13 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/chantelli_antiqua"
             android:gravity="center_horizontal"
-            android:text="Rol &amp; Play"
+            android:text="@string/app_name"
             android:textColor="@color/colorPrimary"
             android:textSize="42sp" />
 
         <ImageView
             android:id="@+id/MainActivity_logo"
+            android:contentDescription="@string/app_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/MainActivity_titulo"
@@ -54,7 +52,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/MainActivity_logo"
-                android:hint="Correo Electrónico"
+                android:hint="@string/correoElectronico"
                 android:background="@android:color/transparent"/>
 
         </com.google.android.material.textfield.TextInputLayout>
@@ -74,7 +72,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@id/MainActivity_email_et"
-                android:hint="Contraseña"
+                android:hint="@string/contrasena"
                 android:inputType="textPassword"
                 android:background="@android:color/transparent"/>
 
@@ -85,7 +83,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@+id/RegistrarActivity_password_TIL"
-            android:text="¿Has olvidado la contraseña?"
+            android:text="@string/hasOlvidadoContrasena"
             android:textSize="15sp"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
@@ -102,7 +100,7 @@
             android:background="@color/colorSecondaryDark"
             android:paddingTop="20dp"
             android:paddingBottom="20dp"
-            android:text="Entrar"
+            android:text="@string/entrar"
             android:textSize="18sp"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
@@ -112,9 +110,6 @@
 
     <RelativeLayout
         android:id="@+id/MainActivity_layoutAbajo"
-        xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         tools:context=".MainActivity">
@@ -124,7 +119,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
-            android:text="¿No tienes cuenta de Rol &amp; Play? Regístrate."
+            android:text="@string/noTienesCuentaRegistrate"
             android:textSize="15sp"
             android:textAllCaps="false"
             android:textColor="@color/colorPrimary"
