--- a/app/src/main/res/layout/layout_dialog_carga.xml
+++ b/app/src/main/res/layout/layout_dialog_carga.xml
@@ -15,9 +15,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cargando..."
+        android:text="@string/cargando"
         android:textSize="24sp"
-        android:layout_marginLeft="10dp"
+        android:layout_marginStart="10dp"
         android:layout_gravity="center_vertical"
         android:textColor="@color/colorPrimary"/>
 
