--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -91,7 +91,7 @@
         android:layout_marginStart="3dp"
         android:backgroundTint="@android:color/transparent"
         style="?android:attr/borderlessButtonStyle"
-        android:layout_above="@+id/ActivityInicio_textoInferior_et"/>
+        android:layout_above="@+id/ActivityInicio_LinearBottom"/>
 
     <Button
         android:id="@+id/ActivityInicio_ataquesConjuros_btn"
@@ -141,27 +141,36 @@
         style="?android:attr/borderlessButtonStyle"
         android:layout_below="@id/ActivityInicio_personalidad_btn"/>
 
-    <TextView
-        android:id="@+id/ActivityInicio_textoInferior_et"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/ActivityInicio_LinearBottom"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/pulsaApartadoVerDetalle"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textSize="18sp"
-        android:textColor="@color/colorPrimary"
-        android:paddingBottom="35dp"/>
+        android:gravity="center_horizontal"
+        android:layout_alignParentBottom="true">
 
-    <ImageView
-        android:id="@+id/ActivityInicio_FlechaArribaIzq_img"
-        android:contentDescription="@string/pulsaApartadoVerDetalle"
-        android:layout_width="25dp"
-        android:layout_height="25dp"
-        app:srcCompat="@drawable/info"
-        android:layout_toStartOf="@id/ActivityInicio_textoInferior_et"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="35dp"
-        android:layout_marginEnd="8dp"/>
+        <ImageView
+            android:id="@+id/ActivityInicio_FlechaArribaIzq_img"
+            android:contentDescription="@string/pulsaApartadoVerDetalle"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            app:srcCompat="@drawable/info"
+            android:layout_toStartOf="@id/ActivityInicio_textoInferior_et"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="35dp"
+            android:layout_marginEnd="8dp"/>
+
+        <TextView
+            android:id="@+id/ActivityInicio_textoInferior_et"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/pulsaApartadoVerDetalle"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:textSize="18sp"
+            android:textColor="@color/colorPrimary"
+            android:paddingBottom="35dp"/>
+
+    </LinearLayout>
 
     <TextView
         android:id="@+id/ActivityInicio_nombreJugador_TV"
