--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -9,10 +9,12 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="colorSecondary">@color/colorPrimary</item>
         <item name="boxStrokeColor">@color/colorPrimary</item>
-        <item name="colorControlNormal">@color/colorPrimary</item>
+        <item name="colorControlNormal">@color/colorTertiaryDark</item>
         <item name="colorControlActivated">@color/colorPrimary</item>
         <item name="android:textColorHint">@color/colorPrimary</item>
         <item name="android:autofilledHighlight">@android:color/transparent</item>
+
+        <item name="android:statusBarColor">@android:color/transparent</item>
     </style>
 
 </resources>
